--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
-    "vuepress": "^1.9.7"
+    "vuepress": "^1.9.7",
+    "vuepress-plugin-seo": "0.1.4"
   }
 }
